fix issue with scrollbar for modal

--- a/app/_styles/module.scss
+++ b/app/_styles/module.scss
@@ -29,7 +29,7 @@
     height: 123px;
     width: 100%;
     padding: 16px 8px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
 
